<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterMahasiswa"
    android:background="@color/color3">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="hideKeyboardOnLayout">

        <TextView
            android:id="@+id/btnBackRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="10dp"
            android:drawableStart="@drawable/ic_back_ios"
            android:background="@drawable/bg_btnripple"
            android:paddingStart="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:clickable="true"
            android:focusable="true" />

        <TextView
            android:id="@+id/signUpMHS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:drawableEnd="@drawable/ic_done"
            android:background="@drawable/bg_btnripple"
            android:clickable="true"
            android:focusable="true"/>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nestedRegister"
            android:layout_below="@+id/btnBackRegister"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">
            <RelativeLayout
                android:id="@+id/back2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/mhs_bg"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:onClick="hideKeyboardOnLayout">

                <!--START EDIT TEXT-->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/etNIMLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="35dp"
                    android:paddingEnd="35dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etNIM"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="17sp"
                        android:drawableStart="@drawable/ic_trending_flat_black_24dp"
                        android:drawablePadding="20dp"
                        android:hint="@string/ETnimhint"
                        android:autoLink="none"
                        android:linksClickable="false"
                        android:importantForAutofill="no"
                        android:inputType="number"/>
                </com.google.android.material.textfield.TextInputLayout>
                <!--END OF EDIT TEXT-->

                <!--START EDIT TEXT-->
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_below="@+id/etNIMLayout"
                    android:id="@+id/etPasswordLayout"
                    android:layout_width="match_parent"
                    android:paddingStart="35dp"
                    android:paddingEnd="35dp"
                    android:layout_marginTop="10dp"
                    android:layout_height="wrap_content"
                    app:passwordToggleEnabled="true"
                    android:layout_marginBottom="20dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_lock_black_24dp"
                        android:drawablePadding="20dp"
                        android:textSize="17sp"
                        android:hint="@string/ETpasswordhint"
                        android:autoLink="none"
                        android:linksClickable="false"
                        android:importantForAutofill="no"
                        android:inputType="textPassword"/>
                </com.google.android.material.textfield.TextInputLayout>
                <!--END OF EDIT TEXT-->

                <!--START EDIT TEXT-->
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_below="@+id/etPasswordLayout"
                    android:id="@+id/etNamaLayout"
                    android:layout_width="match_parent"
                    android:paddingStart="35dp"
                    android:paddingEnd="35dp"
                    android:layout_marginTop="10dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etNama"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_trending_flat_black_24dp"
                        android:drawablePadding="20dp"
                        android:textSize="17sp"
                        android:hint="@string/ETusernamehint"
                        android:autoLink="none"
                        android:linksClickable="false"
                        android:importantForAutofill="no"
                        android:inputType="textCapWords"/>
                </com.google.android.material.textfield.TextInputLayout>
                <!--END OF EDIT TEXT-->

                <!--START EDIT TEXT-->
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_below="@+id/etNamaLayout"
                    android:id="@+id/etTempatLahirLayout"
                    android:layout_width="match_parent"
                    android:paddingStart="35dp"
                    android:paddingEnd="35dp"
                    android:layout_marginTop="10dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etTempatLahir"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_trending_flat_black_24dp"
                        android:drawablePadding="20dp"
                        android:textSize="17sp"
                        android:hint="@string/ETtempatlahirhint"
                        android:autoLink="none"
                        android:linksClickable="false"
                        android:importantForAutofill="no"
                        android:inputType="textCapWords"
                        android:layout_marginBottom="10dp"/>
                </com.google.android.material.textfield.TextInputLayout>
                <!--END OF EDIT TEXT-->

                <LinearLayout
                    android:id="@+id/LinearLayout2"
                    android:layout_below="@+id/etTempatLahirLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingStart="35dp"
                    android:paddingEnd="35dp"
                    android:gravity="center_horizontal"
                    android:layout_marginBottom="20dp">

                    <Button
                        android:id="@+id/bt_datepicker"
                        android:layout_width="100dp"
                        android:layout_height="30dp"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/et_bgmhs"
                        android:text="Pilih Tanggal"
                        android:textColor="#FFFFFF"
                        android:textSize="9sp" />

                    <TextView
                        android:id="@+id/tv_dateresult"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="20dp"
                        android:text="TANGGAL LAHIR"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/LinearLayout3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="15dp"
                    android:paddingStart="35dp"
                    android:paddingEnd="35dp"
                    android:layout_below="@id/LinearLayout2"
                    android:layout_centerHorizontal="true"
                    android:gravity="center_horizontal"
                    android:layout_marginBottom="20dp">
                    <Spinner
                        android:id="@+id/spinnerJK"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:entries="@array/android_dropdown_arrays"
                        android:padding="5dp"/>

                    <TextView
                        android:id="@+id/tv_jkresult"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="JENIS KELAMIN"
                        android:layout_marginStart="20dp"/>

                </LinearLayout>

                <!--START EDIT TEXT-->
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_below="@+id/LinearLayout3"
                    android:id="@+id/etEmailLayout"
                    android:layout_width="match_parent"
                    android:paddingStart="35dp"
                    android:paddingEnd="35dp"
                    android:layout_marginBottom="20dp"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_trending_flat_black_24dp"
                        android:drawablePadding="20dp"
                        android:textSize="17sp"
                        android:hint="@string/ETemail"
                        android:autoLink="none"
                        android:linksClickable="false"
                        android:importantForAutofill="no"
                        android:inputType="textEmailAddress"/>
                </com.google.android.material.textfield.TextInputLayout>
                <!--END OF EDIT TEXT-->

                <!--START EDIT TEXT-->
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_below="@+id/etEmailLayout"
                    android:id="@+id/etNotelLayout"
                    android:layout_width="match_parent"
                    android:paddingStart="35dp"
                    android:paddingEnd="35dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="20dp"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etNotel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_trending_flat_black_24dp"
                        android:drawablePadding="20dp"
                        android:textSize="17sp"
                        android:hint="@string/ETnotel"
                        android:autoLink="none"
                        android:linksClickable="false"
                        android:importantForAutofill="no"
                        android:inputType="phone"/>
                </com.google.android.material.textfield.TextInputLayout>
                <!--END OF EDIT TEXT-->

                <!-- Button SelectPhoto -->
                <LinearLayout
                    android:id="@+id/LayoutSelectPhoto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/etNotelLayout"
                    android:orientation="horizontal"
                    android:layout_marginTop="20dp"
                    android:layout_centerHorizontal="true">

                    <Button
                        android:id="@+id/selectPhoto"
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:background="@drawable/ic_camera"
                        android:textColor="#FFFFFF"
                        android:focusable="true"
                        android:foreground="?android:attr/selectableItemBackground"/>
                </LinearLayout>

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_below="@+id/LayoutSelectPhoto"
                    android:layout_width="150dp"
                    android:layout_height="180dp"
                    android:layout_marginTop="20dp"
                    android:visibility="gone"
                    android:layout_marginBottom="20dp"
                    android:layout_centerHorizontal="true"/>
                <TextView
                    android:id="@+id/tv_titleimage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/imageView"
                    android:layout_marginBottom="40dp"
                    android:text="Tambahkan Pas Foto Latar Belakang Merah"
                    android:gravity="center"/>

            </RelativeLayout>
        </androidx.core.widget.NestedScrollView>

    </RelativeLayout>
</RelativeLayout>